--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:latest
+    build:
+      context: ./Database
+      dockerfile: Dockerfile
     container_name: db
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: pass
-      MYSQL_DATABASE: demo_db
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: market_db
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
     volumes:
@@ -16,14 +18,14 @@ services:
     networks:
       - elk
 
-  demo:
+  market:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - 8082:8082
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/demo_db
+      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/market_db
       - SPRING_DATASOURCE_USERNAME=admin
       - SPRING_DATASOURCE_PASSWORD=admin
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
