--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.uj.demo'
 version = '0.0.1-SNAPSHOT'
 
 task compileAndTest(type: GradleBuild) {
-    tasks = ['clean', 'test', 'build']
+    tasks = ['clean', 'build']
 }
 
 
@@ -58,6 +58,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.projectlombok:lombok'
