--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: db
     ports:
-      - "3306:3306"
+      - "3307:3306"  # Mapping external port 3307 to internal 3306
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: market_db
@@ -23,7 +23,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8082:8082
+      - "8082:8082"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/market_db
       - SPRING_DATASOURCE_USERNAME=admin
