--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=demo
-spring.datasource.url=jdbc:mysql://db:3306/demo_db
+spring.application.name=market
+spring.datasource.url=jdbc:mysql://db:3306/market_db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
