--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,16 @@ version: '3.8'
 
 services:
   db:
-    build:
-      context: ./Database
-      dockerfile: Dockerfile
-    container_name: db
+    image: mysql:8.0
     ports:
-      - "3307:3306"  # Mapping external port 3307 to internal 3306
+      - 3307:3306
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: market_db
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin
+      - MYSQL_ROOT_PASSWORD=admin
+      - MYSQL_DATABASE=qmodel
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=admin
+      - MYSQL_MAX_ALLOWED_PACKET=1G
+    command: --max-allowed-packet=200M
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
@@ -20,14 +19,13 @@ services:
 
   market:
     build:
-      context: .
       dockerfile: Dockerfile
     ports:
       - "8082:8082"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/demo_db
-      - SPRING_DATASOURCE_USERNAME=admin
-      - SPRING_DATASOURCE_PASSWORD=admin
+      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/market_db
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
     depends_on:
       - db
