--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=market
-spring.datasource.url=jdbc:mysql://localhost:3307/market_db
+spring.datasource.url=jdbc:mysql://localhost:3307/market_db\
+#  spring.datasource.url=jdbc:mysql://db/market_db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
