--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:8.0
+    image: mysql:latest
     ports:
-      - 3307:3306
+      - "3307:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=admin
       - MYSQL_DATABASE=market_db
