--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.uj.demo'
 version = '0.0.1-SNAPSHOT'
 
 task compileAndTest(type: GradleBuild) {
-    tasks = ['clean', 'build']
+    tasks = ['clean', 'build', 'test']
 }
 
 
