--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,23 +25,26 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew clean build
 
+      - name: Test with Gradle
+        run: ./gradlew test
+
       - name: Run Docker Compose
         run: docker-compose up --build -d
-
-      - name: Wait for services to be ready
-        run: |
-          echo "Waiting for MySQL to be ready..."
-          docker-compose exec db bash -c 'while ! mysqladmin ping -h"localhost" --silent; do sleep 1; done'
-          echo "MySQL is ready."
-
-      - name: Run tests
-        run: ./gradlew test
 
       - name: Stop Docker Compose
         if: always()
         run: docker-compose down
 
-      - name: Archive test reports
-        if: always()
-        uses: actions/upload-artifact@v3
+  dependency-submission:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5
