--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'mysql:mysql-connector-java:8.0.27'
 
+    implementation 'org.apache.logging.log4j:log4j-core:2.12.4'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'junit:junit:4.13.1'
 }
